--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Eco Essentia - Environmental Solutions & Consulting" />
     <meta property="og:description" content="Engineering environmental solutions for a sustainable future. Expert consulting, pollution control systems, and eco-friendly technologies." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
